--- a/hamming/Hamming.fsproj
+++ b/hamming/Hamming.fsproj
@@ -3,8 +3,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="TwoFer.fs" />
-    <Compile Include="TwoFerTest.fs" />
+    <Compile Include="Hamming.fs" />
+    <Compile Include="HammingTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
